--- a/Creat3D/Config/dev.ini
+++ b/Creat3D/Config/dev.ini
@@ -1,7 +1,7 @@
 ; Configuration pour le développement
 
 [Installation]
-racineWeb = /Ugame/
+racineWeb = /Campus/Creat3D/
 
 [BD]
 dsn = 'mysql:host=localhost;dbname=ugame;charset=utf8'
